Bug 446147 - Palette isn't visually marked dirty after moving a color elsewhere in the palette
Summary: Palette isn't visually marked dirty after moving a color elsewhere in the pal...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Appimage Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-27 01:37 UTC by tomtomtomreportingin
Modified: 2021-12-01 11:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-11-27 01:37:03 UTC
SUMMARY
In 5.0 git e650032 (11/26/21) and 5.1 git 4a272ff (11/26/21), the palette is not visually marked dirty if the user only moves a color to elsewhere in the palette. However, it will still autosave properly.

STEPS TO REPRODUCE
1. Drag a palette color elsewhere in the palette.

OBSERVED RESULT
The palette name is not italicized with an added "*".

EXPECTED RESULT
The palette name should be italicized with an added "*".

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.23.3
KDE Frameworks Version: 5.88.0
Qt Version: 5.12.11 (appimage)
Comment 1 Bug Janitor Service 2021-11-28 18:51:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1184
Comment 2 Halla Rempt 2021-12-01 11:58:17 UTC
Git commit 22e686e097402254a25884ad8dfb2af1eafb8c04 by Halla Rempt, on behalf of Wolthera van Hövell tot Westerflier.
Committed on 01/12/2021 at 11:58.
Pushed by rempt into branch 'master'.

Let the palette docker update it's palette name upon move.

This also shifts the boolean to be stored inside the palette-resource
instead of a boolean elsewhere.
(cherry picked from commit a663bde236db5fc7a9150b92c9b31169f999a9ea)

M  +8    -5    libs/ui/KisPaletteEditor.cpp
M  +1    -0    libs/widgets/KisPaletteModel.cpp
M  +1    -0    libs/widgets/kis_palette_view.cpp
M  +1    -0    libs/widgets/kis_palette_view.h
M  +11   -10   plugins/dockers/palettedocker/palettedocker_dock.cpp
M  +3    -1    plugins/dockers/palettedocker/palettedocker_dock.h

https://invent.kde.org/graphics/krita/commit/22e686e097402254a25884ad8dfb2af1eafb8c04