Let the palette docker update it's palette name upon move.

This also shifts the boolean to be stored inside the palette-resource
instead of a boolean elsewhere.

BUG:446147
(cherry picked from commit a663bde236db5fc7a9150b92c9b31169f999a9ea)